--- a/about.html
+++ b/about.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>splitmate</title>
-    
+    <title>About Us
+    </title>
 </head>
 <body>
     
 </body>
 </html>
-
